--- a/OlinJa/src/main/res/values/strings.xml
+++ b/OlinJa/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">OlinQ</string>
+    <string name="app_name">OlinJa</string>
     <string name="action_settings">Settings</string>
 
     <string name="session_example_title">Diagnostic II</string>
