--- a/OlinJa/src/main/res/values/strings.xml
+++ b/OlinJa/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
 
     <string name="session_title_checkoff">CheckOff!</string>
     <string name="session_title_helpMe">HelpMe!</string>
+    <string name="add_queue">+Q</string>
 </resources>
