Removed gradle files

--- a/OlinJa/src/main/res/values/strings.xml
+++ b/OlinJa/src/main/res/values/strings.xml
@@ -24,6 +24,15 @@
     <string name="dialog_create">Create</string>
     <string name="dialog_edit">Edit</string>
 
-    <string name="session_title_checkoff">CheckOff!</string>
-    <string name="session_title_helpMe">HelpMe!</string>
+    <string name="session_title_checkoff">Check Off!</string>
+    <string name="session_title_helpMe">Help Me!</string>
+
+    <string name="checked_off_people">People Who Have Been Checked Off:</string>
+    <string name="login_title">Login</string>
+    <string name="login">Name:</string>
+    <string name="login_hint">Type in Actual Name</string>
+    <string name="student">Student</string>
+    <string name="login_ninja">Ninja</string>
+    <string name="button_text">I am a:</string>
+
 </resources>
