--- a/OlinJa/src/main/res/values/strings.xml
+++ b/OlinJa/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="student">Student</string>
     <string name="login_ninja">Ninja</string>
     <string name="button_text">I am a:</string>
+
+    <string name="signin_main">Network Credentials</string>
+    <string name="signin_user">Windows Login</string>
+    <string name="signin_pass">Password</string>
 </resources>
