--- a/OlinJa/src/main/res/values/strings.xml
+++ b/OlinJa/src/main/res/values/strings.xml
@@ -42,4 +42,8 @@
     <string name="signin_main">Network Credentials</string>
     <string name="signin_user">Windows Login</string>
     <string name="signin_pass">Password</string>
+
+    <string name="notify">Notify</string>
+    <string name="checkoff">Check Off</string>
+    <string name="remove">Remove</string>
 </resources>
